Validation for required elements on state changes. Updated openseadragn.

--- a/app/views/pul_store/lae/folders/_pages_list.html.erb
+++ b/app/views/pul_store/lae/folders/_pages_list.html.erb
@@ -30,13 +30,13 @@
               </h4>
             </div>
             <div class="modal-body">
-              <div class="viewer">
+              <div class="viewer" id="osd<%= pul_store_page_model_string(page['id']) %>">
                 <% id_to_show = id_label_for_page(page) %>
                 <script>
     $('#<%= pul_store_page_model_string(page['id']) %>').on('show.bs.modal', function (event) {
         var button = $(event.relatedTarget); // Button that triggered the modal
-        var modal = $(this);
-        var viewer = modal.find('.viewer');
+        //var modal = $(this);
+        //var viewer = modal.find('.viewer');
         // viewer.iiifOsdViewer({
         //   data: [{
         //     iiifServer: 'http://libimages.princeton.edu/loris2',
@@ -44,7 +44,7 @@
         //   ]
         // });
         var osd_config = {
-            id: <%= pul_store_page_model_string(page['id']) %>,
+            id: "osd" + <%= pul_store_page_model_string(page['id']) %>,
             prefixUrl: "js/openseadragon/images/",
             preserveViewport: true,
             showNavigator:  true,
@@ -52,7 +52,7 @@
             minZoomLevel: 1,
             tileSources: ["<%= pul_store_iiif_info_path(page['id']) %>"]
         }
-        OpenSeadragon(osd_config);
+        var osd = OpenSeadragon(osd_config);
       });
     </script>
             </div>
