Open Seadragon asset generator re-run per readme of openseadragon-rails gem for v.020.

--- a/app/views/pul_store/lae/folders/_form.html.erb
+++ b/app/views/pul_store/lae/folders/_form.html.erb
@@ -223,9 +223,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="row">
-              <%= render :partial => "page_preview" %>
-            </div>
+            <!-- removed preview page from admin tab -->
           </div>
         
       </div>
