--- a/app/assets/stylesheets/components/viewer.scss
+++ b/app/assets/stylesheets/components/viewer.scss
@@ -14,3 +14,333 @@
     @include box-shadow(0 1px 3px rgba(0, 0, 0, 0.055));
   }
 }
+
+.viewer {
+        // border: 1px solid #ccc;
+        height: 520px;
+        //margin: 40px 0 0 40px;
+        width: 650px;
+        margin: 2em auto;
+      }
+
+.viewer-full {
+        // border: 1px solid #ccc;
+        height: 800px;
+        margin: 40px 0 0 40px;
+        width: 1000px;
+      }
+
+.iov {
+  box-sizing: border-box;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
+
+.iov a, .iov a:hover {
+  color: #000;
+}
+
+.iov-header {
+  background: #5a5d69;
+  height: 30px;
+  width: 100%;
+}
+
+.iov-menu-bar {
+  overflow: auto;
+  z-index: 1000;
+}
+
+.iov-menu-bar h2.iov-item-count {
+  display: inline;
+}
+
+.iov-fullscreen-height {
+  height: 100%;
+}
+
+.iov-menu-bar .iov-controls {
+  float: right;
+  margin: 6px 10px 0 0;
+}
+
+.iov-menu-bar .iov-view-options {
+  float: right;
+  margin: 6px 10px 0 0;
+  height: 20px;
+  font-size: 14px;
+}
+
+.iov-menu-bar .iov-controls a, .iov-menu-bar .iov-controls a:hover {
+  color: white;
+  cursor: pointer;
+  font-size: 15px;
+  margin-top: 2px;
+}
+
+ .iov-list-view {
+  float: right;
+  height: 100%;
+  width: 100%;
+  margin-left: -100px;
+}
+
+.iov-list-view .iov-list-view-thumbs-viewport,
+.iov-list-view .iov-list-view-osd {
+  height: 100%;
+}
+
+.iov-list-view .iov-list-view-thumbs-viewport {
+  float: left;
+  height: 100%;
+  overflow-y: scroll;
+  position: relative;
+  width: 100px;
+}
+
+.iov-list-view .iov-list-view-osd {
+  margin-left: 100px;
+}
+
+.iov-list-view .iov-remove-margin {
+  margin-left: 0;
+}
+
+.iov-list-view .iov-list-view-thumbs-viewport ul {
+  margin: 0;
+  padding: 5px 0;
+  position: relative;
+}
+
+.iov-list-view .iov-list-view-thumbs-viewport li {
+  cursor: pointer;
+  list-style-type: none;
+  padding: 5px 10px 5px 10px;
+  color: white;
+}
+
+.iov-list-view .iov-list-view-thumbs-viewport li img {
+  position: relative;
+  width: 100%;
+}
+
+.iov .iov-list-view-left-nav, .iov .iov-list-view-right-nav {
+  border-bottom: none;
+  color: silver;
+  font-size: 4em;
+  position: absolute;
+  text-decoration: none;
+  top: 50%;
+  z-index: 1000;
+}
+
+.iov .iov-list-view-left-nav:hover, .iov .iov-list-view-right-nav:hover {
+  border-bottom: none;
+  color: #999;
+}
+
+.iov .iov-sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
+.iov .iov-list-view-left-nav {
+  left: 100px;
+}
+
+.iov .iov-list-view-right-nav {
+  right: 1px;
+}
+
+.iov-list-view-thumb-selected {
+  background-color: #666;
+}
+
+.iov-list-view-controls {
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  float: left;
+  font-size: 14px;
+  position: absolute;
+  right: 10px;
+  top: 35px;
+  z-index: 1000;
+}
+
+.iov-menu-bar a {
+  color: #000;
+  text-decoration: none;
+}
+
+.iov-list-view-controls .fa {
+  padding: 4px 6px;
+}
+
+.iov-gallery-view {
+  height: 100%;
+  overflow-y: scroll;
+  width: 100%;
+}
+
+.iov-gallery-view ul {
+  margin: 0;
+  padding: 5px;
+  position: relative;
+}
+
+.iov-gallery-view li {
+  float: left;
+  list-style-type: none;
+  padding: 5px;
+  min-width: 72px;
+}
+
+.iov-gallery-view li img {
+  max-width: 100%;
+}
+
+.iov-list-view-thumbs li:after, .iov-gallery-view li:after, .iov-horizontal-view-images li:after {
+  content: attr(data-alt);
+  display: block;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 0.9em;
+}
+
+.iov-gallery-view li:after {
+  max-width: 72px;
+}
+
+.iov-horizontal-view {
+  height: 100%;
+}
+
+.iov-horizontal-view .iov-horizontal-view-viewport {
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+.iov-horizontal-view ul {
+  margin: 2px 0 5px 0;
+  padding: 0;
+}
+
+.iov-horizontal-view li {
+  float: left;
+  list-style-type: none;
+  padding: 0 5px;
+}
+
+.iov-menu-bar a,
+.iov-controls a,
+.iov-menu-bar a, .iov-menu-bar a:hover,
+.iov-list-view-controls a, .iov-list-view-controls a:hover,
+.iov-list-view-thumbs a, .iov-list-view-thumbs a:hover,
+.iov-gallery-view a, .iov-gallery-view a:hover,
+.iov-horizontal-view-images a, .iov-horizontal-view-images a:hover {
+  border-width: 0;
+  text-decoration: none;
+}
+
+
+:-webkit-full-screen  {
+  height: 100%;
+  left: 0;
+  margin: 0;
+  top: 0;
+  width: 100%;
+}
+
+:-moz-full-screen  {
+  height: 100%;
+  left: 0;
+  margin: 0;
+  top: 0;
+  width: 100%;
+}
+
+:-ms-fullscreen .iov {
+  height: 100%;
+  left: 0;
+  margin: 0;
+  top: 0;
+  width: 100%;
+}
+
+:full-screen .iov { /*pre-spec */
+  height: 100%;
+  left: 0;
+  margin: 0;
+  top: 0;
+  width: 100%;
+}
+
+:fullscreen .iov { /* spec */
+  height: 100%;
+  left: 0;
+  margin: 0;
+  top: 0;
+  width: 100%;
+}
+
+//overrides
+// overrides
+.iov a, .iov a:hover {
+  color: #000;
+}
+
+.iov-header {
+  background: white;
+}
+.iov-list-view-controls {
+  top: 16px;
+  font-size: 16px;
+}
+
+.iov-list-view-controls, .iov .iov-list-view-right-nav, .iov .iov-list-view-left-nav {
+  display: none;
+}
+
+.iov .iov-list-view-right-nav, .iov .iov-list-view-left-nav {
+  color: #000;
+  margin: 0 16px;
+}
+
+.viewer:hover .iov-list-view-controls,
+.viewer:hover .iov .iov-list-view-right-nav,
+.viewer:hover .iov .iov-list-view-left-nav {
+  display: inline-block;
+}
+
+.iov-list-view .iov-list-view-thumbs-viewport ul {
+  margin: 1em 1em 0 0;
+}
+
+.iov-list-view-thumb-selected {
+    background-color: #eee;
+    border-radius: 4px;
+    padding: 1em;
+  }
+
+.iov-list-view .iov-list-view-thumbs-viewport li {
+  padding: 10px 10px 5px 10px;
+  color: #000;
+}
+
+.iov-list-view-thumbs li:hover {
+  background: #477dca;
+  border-radius: 4px;
+}
+
+.iov-menu-bar .iov-controls a, .iov-menu-bar .iov-controls a:hover {
+  color: black;
+}
